kubernetes/testing/guacamole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/instance: guacamole
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/instance: guacamole
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
