kubernetes/testing/guacamole/ingressroute.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: "guacamole.local.biermann.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole
                port:
                  number: 8080
